# harness-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: harness-audit.md  harness-gc.md  harness-lint.md
.github/workflows/: test.yml
.harness/: AGENTS.md
.harness/constraints/: layers.yml  no-cross-command-imports.yml
.harness/context/: ARCHITECTURE.md
.harness/templates/: constitution-template.md  constraint-template.md  gc-report-template.md  health-report-template.md
base/: AGENTS.md
base/commands/claude/: harness-audit.md  harness-constraint.md  harness-gc.md  harness-lint.md  harness-setup.md
base/constraints/: boundaries.yml  layers.yml  naming.yml
base/memory/: constitution.md
base/templates/: constitution-template.md  constraint-template.md  gc-report-template.md  health-report-template.md
docs/: why-harness-engineering.md
src/harness_cli/: __init__.py  main.py
src/harness_cli/commands/: audit.py  check.py  constraint.py  gc.py  init.py  lint.py  loop.py
src/harness_cli/engine/: loop_detector.py
tests/: test_gc.py  test_lint.py  test_loop_detector.py
